# debate-coach

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
app/backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/backend/agents/executors/: debate_executor.py  pitch_executor.py
app/backend/agents/planner/: planner_agent.py
app/backend/agents/supervisor/: policies.py  supervisor_agent.py
app/backend/agents/tools/: fallacies.py  parsing.py  research.py  scoring.py
app/backend/agents/triage/: triage_agent.py
app/backend/api/: deps.py
app/backend/api/routers/: chat.py  columns.py  session.py
app/backend/core/: config.py  schemas.py  state.py
app/backend/core/llm/: cheap_client.py  main_client.py  smol_client.py
app/backend/core/telemetry/: logger.py  metrics.py
app/backend/core/utils/: text.py  time.py  utils.py
app/backend/integrations/: tavily_client.py  wikipedia_client.py
app/backend/prompts/: evaluation.txt  extract_claims.txt  fallacies.txt  impression.txt  objections.txt  pitch_objections.txt  planner.txt  research_classify.txt  supervisor.txt  triage.txt
app/backend/services/: chat_loop.py  columns_export.py
app/backend/src/: main.py
app/backend/src/agents/: supervisor_agent.py
app/backend/src/core/: event_bus.py  settings.py
app/backend/tests/: conftest.py  test_api_minimal.py  test_debate_api.py  test_end_to_end.py  test_event_bus_basic.py  test_event_bus_sync.py  test_health.py  test_pitch_api.py  test_research_pipeline.py  test_smoke_server.py
app/frontend/: .dockerignore  (+4 more)
(+40 files in other folders)
