[project]
name = "debate_coach_backend"
version = "0.1.0"
description = "Debate-Coach backend (FastAPI)"
authors = [{name = "Team Debate-Coach"}]
requires-python = ">=3.10"
readme = "README.md"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
openai = ">=1.35.0"
jinja2 = ">=3.1.4"
anyio = "^4.4.0"

[tool.pytest.ini_options]
addopts = "-q"

[tool.uvicorn]
factory = true
